<resources>
    <string name="app_name">Getletter-android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_text">TextActivity</string>

    <string name="homepage_text1"> ENVOYEZ UNE CARTE DE VOEUX </string>
    <string name="homepage_text2">Souhaitez une \nbonne année à vos \ncontacts pro !</string>
    <string name="homepage_text3">VOS DERNIÈRES CARTES ENVOYÉES</string>
    <string name="homepage_btn">Envoyer une carte de voeux</string>

    <string name="login_punchline">Vos voeux professionnels, \n maintenant sublimés !</string>
    <string name="login_btn">Connexion avec LinkedIn</string>
    <string name="login_conditions">En vous connectant, vous acceptez nos conditions générales d’utilisation.</string>

    <string name="msg_header">Écrivez votre message dès à présent !</string>

    <string name="timeline_back">Retour</string>
    <string name="timeline_go">Continuer</string>

    <string name="overview_header">Visualisez une dernières fois votre carte de voeux !</string>

    <string name="recipient_header">Dites-nous en plus sur le destinataire !</string>
    <string name="recipient_firstname">Prénom</string>
    <string name="recipient_lastname">Nom</string>
    <string name="recipient_adresse">Adresse</string>
    <string name="recipient_postcode">Code postal</string>
    <string name="recipient_town">Ville</string>

    <string name="send_header">Finalisez l\'envoi de votre carte !</string>
    <string name="send_checkbox">Masquer le label GetLetter de la lettre.</string>
    <string name="send_text1">SUPPLÉMENT DE 2€</string>
    <string name="send_btn_pay">Payer et envoyer</string>
    <string name="send_text2">RÉSUMÉ</string>
    <string name="send_text3">Livraison --</string>
    <string name="send_value1">2€</string>
    <string name="send_text4">Résumé ---</string>
    <string name="send_value2">1€</string>
    <string name="send_text5">TOTAL TTC</string>
    <string name="send_text6">Votre première carte de voeux est gratuite !</string>
    <string name="send_totalvalue">0€</string>

    <string-array name="send_modes">
        <item>Mode d'envoi</item>
        <item>Mode d'envoi normal</item>
        <item>Mode d'envoi express</item>
    </string-array>
    <string-array name="send_paper">
        <item>Papier</item>
        <item>Papier normal</item>
        <item>Papier à lettres</item>
        <item>Papier bristol</item>
    </string-array>

</resources>
