<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/activity"
    tools:context="com.android.getletter.getletter.SendActivity"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:contentDescription="background"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pattern_plane" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_black"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/send_header"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/select1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/send_modes"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintRight_toRightOf="@+id/activity"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/select2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/send_paper"
        app:layout_constraintTop_toBottomOf="@+id/select1"
        app:layout_constraintRight_toRightOf="@+id/activity"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="10sp"
        android:text="@string/send_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/select2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:fontFamily="@font/avenir_black"
        android:text="@string/send_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/label"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:fontFamily="@font/avenir_black"
        android:text="@string/send_text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/avenir_light"
        android:text="@string/send_text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/send_value1"
        app:layout_constraintLeft_toRightOf="@+id/text3"
        app:layout_constraintBaseline_toBaselineOf="@+id/text3" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/avenir_light"
        android:text="@string/send_text4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/send_value2"
        app:layout_constraintLeft_toRightOf="@+id/text5"
        app:layout_constraintBaseline_toBaselineOf="@+id/text5" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:fontFamily="@font/avenir_black"
        android:text="@string/send_text5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text6" />

    <TextView
        android:id="@+id/totalvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/send_totalvalue"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text7" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/send_text6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalvalue" />

    <ImageView
        android:id="@+id/timeline"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/timeline6" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="25dp"
        android:background="@color/colorAccent"
        android:elevation="10dp"
        android:fontFamily="@font/avenir_black"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/timeline_back"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        app:layout_constraintRight_toLeftOf="@id/btn_continue"
        app:layout_constraintLeft_toLeftOf="@id/activity"
        app:layout_constraintTop_toBottomOf="@+id/timeline" />

    <Button
        android:id="@+id/btn_continue"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:fontFamily="@font/avenir_black"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/send_btn_pay"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15dp"
        app:layout_constraintRight_toRightOf="@id/activity"
        app:layout_constraintTop_toBottomOf="@+id/timeline" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

</android.support.constraint.ConstraintLayout>