<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.android.getletter.getletter.HomepageActivity"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pattern_plane" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logobleu" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:fontFamily="@font/avenir_black"
        android:text="@string/homepage_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/homepage_text2"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:lineSpacingMultiplier="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <Button
        android:id="@+id/btn_send"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/avenir_black"
        android:text="@string/homepage_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_send"
        android:background="@color/colorPrimary" />


    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:fontFamily="@font/avenir_black"
        android:text="@string/homepage_text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ListView
        android:id="@+id/list_item"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text3">

    </ListView>

</android.support.constraint.ConstraintLayout>